# slopcheck

./: CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  publish.yml
ai_slopcheck/: __init__.py  cli.py  config.py
ai_slopcheck/rules/generic/: assignment_in_conditional.py  break_in_nested_loop.py  console_log_in_production.py  contradictory_null_check.py  hardcoded_secret.py  js_json_parse_unguarded.py  js_loose_equality.py  many_positional_args.py  multiple_classes_per_file.py  obfuscated_code.py
ai_slopcheck/state/: store.py
slopcheck/: config.py
slopcheck/engine/: repo_files.py
slopcheck/rules/: registry.py
slopcheck/rules/generic/: assignment_in_conditional.py  break_in_nested_loop.py  collection_modify_while_iterating.py  contradictory_null_check.py  dangerous_shell_in_markdown.py  debug_code_left.py  deep_inheritance.py  division_by_zero_risk.py  (+21 more)
tests/: test_assignment_in_conditional.py  test_break_in_nested_loop.py  test_collection_modify_while_iterating.py  test_console_log.py  test_contradictory_null_check.py  test_dangerous_shell_in_markdown.py  test_debug_code_left.py  test_deep_inheritance.py  test_division_by_zero_risk.py  test_early_return_opportunity.py  test_global_state_leak.py  test_goto_usage.py  test_hardcoded_secret.py  test_idor_risk.py  test_js_loose_equality.py  test_js_timer_no_cleanup.py  test_large_anonymous_function.py  test_large_file.py  test_lock_without_release.py  test_many_positional_args.py  test_multiple_classes_per_file.py  test_obfuscated_code.py  test_oversized_class.py  test_param_reassignment.py  test_recursion_without_limit.py  test_redundant_sql_index.py  test_short_variable_name.py  test_stale_comment.py  test_thread_unsafe_global.py  test_unreachable_code_after_return.py  test_use_after_free.py  test_weak_function_name.py  test_within_file_duplication.py
